feat: add EP for dashboard international students (#42)
* feat: add EP for dashboard international students

* feat: add EP for dashboard international students
