# api/merged-openapi.yaml
@@ -87,6 +87,7 @@ paths:
       summary: registerInternationalStudent
       description: Register a new international student
       operationId: registerInternationalStudent
+      security: []
       requestBody:
         description: International student registration details
         required: true
@@ -138,6 +139,68 @@ paths:
                   #/components/schemas/InternationalStudentProfileDetailsResponse
         '400':
           description: Bad request (invalid data)
+        '401':
+          description: Unauthorized
+  /user-management/api/international-student/anonymous:
+    get:
+      tags:
+        - UserManagement
+      summary: getAllInternationalStudentsAnonymous
+      description: Retrieve a list of all registered international students
+      operationId: getAllInternationalStudentsAnonymous
+      parameters:
+        - name: page
+          in: query
+          description: Page number for pagination (default is 0)
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          description: Number of records per page for pagination (default is 20)
+          required: false
+          schema:
+            type: integer
+            default: 20
+        - name: semesterId
+          in: query
+          description: Optional semester ID to filter students by semester
+          required: false
+          schema:
+            type: string
+            format: uuid
+        - name: facultyId
+          in: query
+          description: Optional faculty ID to filter students by faculty
+          required: false
+          schema:
+            type: string
+            format: uuid
+        - name: countryCode
+          in: query
+          description: Optional country code to filter students by country
+          required: false
+          schema:
+            type: string
+      security:
+        - keycloak_auth:
+            - TUTOR
+            - ADMIN
+      responses:
+        '200':
+          description: A list of international students
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  pageable:
+                    $ref: '#/components/schemas/PageableResponse'
+                  students:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/InternationalStudentAnonymous'
         '401':
           description: Unauthorized
   /settings/api/health:
@@ -289,6 +352,20 @@ components:
         - MALE
         - FEMALE
         - OTHER
+    PageableResponse:
+      type: object
+      properties:
+        pageNumber:
+          type: integer
+        pageSize:
+          type: integer
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+        isLast:
+          type: boolean
     StudentBase:
       type: object
       properties:
@@ -312,6 +389,26 @@ components:
           type: string
         emailMarketingChecked:
           type: boolean
+    InternationalStudentAnonymous:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        countryCode:
+          type: string
+        gender:
+          $ref: '#/components/schemas/GenderEnum'
+        homeUniversity:
+          type: string
+        facultyId:
+          type: string
+          format: uuid
+        semesterId:
+          type: string
+          format: uuid
+        bio:
+          type: string
     RegisterLocalStudentRequest:
       allOf:
         - $ref: '#/components/schemas/StudentBase'
